# commit-racer

./: .editorconfig  .gitignore  .justfile  Cargo.toml  README.md  TODO.md  shell.nix
commit-racer/: .env  .env.development  .env.development.local.example  .justfile  Cargo.toml  sqlx-data.json
commit-racer/src/: config.rs  db.rs  lib.rs  main.rs
commit-racer/src/models/: mod.rs  user.rs
commit-racer/src/models/github/: auth_response.rs  mod.rs
commit-racer/src/routes/: health_check.rs  hello.rs  index.rs  mod.rs
commit-racer/src/routes/api/: mod.rs  slack.rs
commit-racer/src/routes/auth/: github.rs  mod.rs  slack.rs
commit-racer/templates/: logged-in.html.tera  logged-out.html.tera
db/: .env  .justfile  .sqlfluff
db/migrations/: 00010_schema_slack.sql  00011_table_slack_auth_responses.sql  00012_table_slack_enterprises.sql  00013_table_slack_enterprise_users.sql  00014_table_slack_workspaces.sql  00015_table_slack_workspace_users.sql  00016_table_slack_bots.sql  00021_table_github_users.sql  00100_table_users.sql
db/queries/: insert_slack_auth_response.sql  query_user_by_id.sql  upsert_user_by_slack_user_id.sql
db/tests/slack/: slack_insert_auth_response_rows.sql
scripts/: generate-slack-types.sh
src/: routes.rs
templates/: hello.html.tera
